--- a/module-4/4.css
+++ b/module-4/4.css
@@ -1,13 +1,11 @@
 .container {
   margin: 0 auto;
   width: 1110px;
-  padding-bottom: 112px;
   list-style-type: none;
 }
 .logotipe {
   text-transform: uppercase;
   text-decoration: none;
-  float: left;
   font-size: 30px;
   line-height: 32px;
   font-family: "Roboto", sans-serif;
@@ -15,7 +13,9 @@
   color: #0f0101;
 }
 
-.logotipe::first-letter {
+h1 { float: left;}
+
+h1::first-letter {
   color: #1abc9c;
   font-weight: 900;
 }
@@ -27,6 +27,8 @@
 }
 
 .site-navigation {
+  margin: 0;
+  padding-top: 40px;
   float: right;
   list-style-type: none;
   font-family: "Roboto", sans-serif;
@@ -37,16 +39,23 @@
 
 .site-navigation-item {
   float: left;
-  margin-left: 35px;
+  margin-right: 35px;
   text-transform: uppercase;
 }
+
+.site-navigation-item:last-child {margin-right: 0;}
+
 
 .site-navigation a {
   text-decoration: none;
   color: #0f0101;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 900;
+  display: block;
 }
 
-.site-navigation-item :hover {
+.site-navigation-item a:hover {
   color: #1abc9c;
 }
 
@@ -55,31 +64,29 @@ img {
 }
 
 .title {
-  margin: 0 auto;
+  margin: auto;
+  padding-top: 68px;
   display: block;
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 32px;
+  line-height: 48px;
   font-weight: 900;
   text-transform: uppercase;
   color: #515151;
+  margin-bottom: 76px;
 }
 
 .content-list {
   list-style-type: none;
-  width: 1110px;
   padding: 0;
-  margin-top: 92px;
-  margin-bottom: 106px;
+  margin: 0 auto;
 }
 
 .content-list-item {
   float: left;
   width: 255px;
   margin-right: 30px;
-}
-
-.content-list-item :nth-child(n + 3) {
   margin-bottom: 30px;
 }
 
@@ -126,11 +133,11 @@ img {
   line-height: 32px;
 }
 
-.content-list-item :hover .description-cart {
+.content-list-item:hover .description-cart {
   background: #1abc9c;
-}
+} 
 
-.content-list-item :hover .description-price {
+.content-list-item:hover .description-price {
   background: #7fd9c7;
 }
 
@@ -150,11 +157,15 @@ h2::after {
   height: 7px;
   color: #515151;
   background: #1abc9c;
-  margin: 32px auto;
+  margin: auto;
+  margin-top: 32px;
 }
 
+
 .caption {
-  margin: 0 auto;
+  margin: auto;
+  margin-bottom: 76px;
+  margin-top: 74px;
   display: block;
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -173,11 +184,11 @@ h2::after {
   list-style-type: none;
   width: 350px;
   padding: 0;
-  margin-top: 82px;
   margin-right: 30px;
+  margin-bottom: 48px;
 }
 
-h4 {
+h3 {
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
   line-height: 26px;
@@ -200,7 +211,7 @@ h4 {
   margin-bottom: 16px;
 }
 
-h4::after {
+h3::after {
   display: block;
   content: "";
   width: 136px;
@@ -220,3 +231,5 @@ h4::after {
   line-height: 26px;
   color: #fff;
 }
+
+
