--- a/module-4/4.css
+++ b/module-4/4.css
@@ -13,7 +13,8 @@
   color: #0f0101;
 }
 
-h1 { float: left;}
+h1 { float: left;
+margin: 0;}
 
 h1::first-letter {
   color: #1abc9c;
@@ -26,9 +27,10 @@ h1::first-letter {
   display: table;
 }
 
+header {padding-top: 38px;}
+
 .site-navigation {
   margin: 0;
-  padding-top: 40px;
   float: right;
   list-style-type: none;
   font-family: "Roboto", sans-serif;
@@ -46,6 +48,8 @@ h1::first-letter {
 .site-navigation-item:last-child {margin-right: 0;}
 
 
+
+
 .site-navigation a {
   text-decoration: none;
   color: #0f0101;
@@ -58,6 +62,8 @@ h1::first-letter {
 .site-navigation-item a:hover {
   color: #1abc9c;
 }
+
+.content-list-item:nth-child(n+4) {margin-bottom: 0;}
 
 img {
   display: block;
@@ -178,6 +184,7 @@ h2::after {
 .content-list-news {
   width: 1110px;
   padding: 0;
+  margin: 0;
 }
 .content-list-item-news {
   float: left;
@@ -185,16 +192,17 @@ h2::after {
   width: 350px;
   padding: 0;
   margin-right: 30px;
-  margin-bottom: 48px;
 }
 
-h3 {
+.picture {margin-bottom: 16px;}
+
+.headline {
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
   line-height: 26px;
   font-weight: 600;
   color: #555252;
-  margin-top: 16px;
+  margin: 0;
   margin-bottom: 44px;
 }
 
@@ -208,6 +216,7 @@ h3 {
   line-height: 26px;
   font-weight: 600;
   color: #555252;
+  margin: 0;
   margin-bottom: 16px;
 }
 
@@ -233,3 +242,4 @@ h3::after {
 }
 
 
+.more:hover {color: #030000f8;}
