--- a/module-5/5.css
+++ b/module-5/5.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 html {
@@ -40,7 +40,8 @@ html {
 
 .site-navigation {
   float: right;
-  padding: 16px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   list-style-type: none;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
@@ -68,14 +69,21 @@ html {
 }
 
 .background {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("1.jpg");
+  background-image: url("./images/1.jpg");
   height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.wrapper {
+.background {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./images/1.jpg");
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.preview {
   position: relative;
   margin: 0 auto;
   width: 1110px;
@@ -105,7 +113,6 @@ h2 {
   color: #ffffff;
 }
 
-
 button {
   border: none;
   width: 104px;
@@ -113,22 +120,34 @@ button {
 }
 
 .btn-left {
-  background-image: url(7.png);
+  position: relative;
+  background-image: url(./images/7.png);
   background-repeat: no-repeat;
   background-position: center;
   background-color: #1abc9c;
   position: absolute;
   top: 40%;
   left: 0;
+  opacity: 0.8;
 }
+
+.btn-left:hover {
+  opacity: 1;
+}
+
 .btn-right {
-  background-image: url(8.png);
+  background-image: url(./images/8.png);
   background-repeat: no-repeat;
   background-position: center;
   background-color: #1abc9c;
   position: absolute;
   top: 40%;
   right: 0%;
+  opacity: 0.8;
+}
+
+.btn-right:hover {
+  opacity: 1;
 }
 
 .collection {
@@ -169,7 +188,6 @@ h3::after {
   float: left;
   margin-right: 30px;
   width: 255px;
-  height: 322px;
 }
 
 .collection-item:last-child {
@@ -179,23 +197,25 @@ h3::after {
 .container-collection {
   margin: 0 auto;
   width: 1110px;
-  height: 676px;
 }
 
 h4 {
   float: left;
   width: 200px;
   margin: 0;
-  padding-left: 16px;;
+  padding-left: 16px;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 900;
   text-transform: uppercase;
-  
+}
+
+.item {
+  background-color: transparent;
 }
 
 .btn-heart {
-  background-image: url(14.png);
+  background-image: url(./images/14.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 50px;
@@ -203,7 +223,7 @@ h4 {
 }
 
 .btn-arrow {
-  background-image: url(13.png);
+  background-image: url(./images/13.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 50px;
@@ -211,7 +231,7 @@ h4 {
 }
 
 .btn-clock {
-  background-image: url(12.png);
+  background-image: url(./images/12.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 50px;
@@ -219,8 +239,9 @@ h4 {
 }
 
 .btn-cart {
-  background-image: url(10.png);
+  background-image: url(./images/10.png);
   background-repeat: no-repeat;
+  background-color: #323232;
   background-position: 5%;
   color: #ffffff;
   padding-left: 20px;
@@ -229,7 +250,6 @@ h4 {
   text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
- 
 }
 
 .btn-collection {
@@ -240,7 +260,6 @@ h4 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
 }
 
 .btn-collection li {
@@ -253,11 +272,14 @@ h4 {
   margin-right: 0px;
 }
 
+img {
+  display: inline-block;
+}
 
 .overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 322px;
   top: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
@@ -265,50 +287,78 @@ h4 {
   opacity: 0;
   border: 10px solid rgba(256, 256, 256, 0.5);
   background-clip: padding-box;
-  
 }
- .collection-item:hover .overlay {
-   opacity: 1;
-   visibility: visible;
- }
 
- .item {
-  background-color: transparent;
- }
+.collection-item:hover .overlay {
+  opacity: 1;
+  visibility: visible;
+}
 
- .description-cart a {
-   float: left;
-   text-decoration: none;
-   font-family:"Roboto", sans-serif;
-   font-size: 18px;
-   line-height: 32px;
-   font-weight: 900;
-   color: #ffffff;
- }
+.description-cart a {
+  float: left;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 900;
+  color: #ffffff;
+}
 
 .description-cart h4 {
-  background: #323232
+  background: #323232;
 }
 
- .description-price {
-   float: right;
-   width: 55px;
-   text-align: center;
-   font-family: "Roboto", sans-serif;
-   font-size: 18px;
-   line-height: 32px;
-   font-weight: 900;
-   color: #ffffff;
-   background: rgba(0, 0, 0, 0.5);
- }
+.description-price {
+  float: right;
+  width: 55px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 900;
+  color: #ffffff;
 
+  background: rgba(0, 0, 0, 0.5);
+}
 
-
- .collection-item:hover .description-cart h4 {
+.collection-item:hover .description-cart h4 {
   background: #1abc9c;
-} 
+}
 
 .collection-item:hover .description-price {
-  background: #7fd9c7;}
+  background: #7fd9c7;
+}
 
-.collection-item:hover .btn-arrow {background-color: #1abc9c;}
+.btn-cart:hover {
+  background-color: #1abc9c;
+}
+
+.btn-clock:hover {
+  background-color: #1abc9c;
+}
+
+.btn-arrow:hover {
+  background-color: #1abc9c;
+}
+
+.btn-heart:hover {
+  background-color: #1abc9c;
+}
+
+.footer {
+  height: 90px;
+  padding-top: 37px;
+  text-align: center;
+  background-color: #323232;
+}
+
+.footer a {
+  color: #f0f0f0;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.footer a:hover {
+  color: #46bfa9;
+}
